--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,23 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <section class="section projects">
+    <h2 class="proj-title">projects</h2>
      <div class="swiper-container">
     <div class="swiper-wrapper" id="swiper-wrapper">
+      
     </div>
   </div>
-      <div class="btn-wrap">
-        <div class="nav-btn swiper-button-prev">
-          <svg id="icon-arrow-narrow-right"></svg>
+      <div class="proj-btn-wrap">
+        <div class="proj-nav-btn proj-btn-prev">
+          <svg id="icon-arrow-right"></svg>
         </div>
-        <div class="nav-btn swiper-button-next"><svg id="icon-arrow-narrow-left"></svg></div>
+        <div class="proj-nav-btn proj-btn-next">
+            <svg id="icon-arrow-left"></svg>
+        </div>
       </div>
     </div>
+</section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
